// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonBreadcrumbs renders breadcrumbs and back button 1`] = `
<div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs">
  <div class="neon-swiper__container">
    <!-- @slot contents of swiper with which to apply overflow scrolling. -->
    <div class="neon-breadcrumbs__container"><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__back neon-breadcrumbs__back" tabindex="0">
        <!-- @slot the content of the link -->
        <!--v-if--> Back
      </a>
      <div class="neon-breadcrumbs__links">
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1">
          <!-- @slot the content of the link -->Level 1
        </a>
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1/level-2">
          <!-- @slot the content of the link -->Level 2
        </a>
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1/level-2/1234-5678-90">
          <!-- @slot the content of the link -->1234-5678-90
        </a>
      </div>
    </div>
  </div>
  <div class="neon-swiper__fade-out"></div>
</div>
`;

exports[`NeonBreadcrumbs renders breadcrumbs only 1`] = `
<div class="neon-swiper--horizontal neon-swiper--fade neon-swiper neon-breadcrumbs">
  <div class="neon-swiper__container">
    <!-- @slot contents of swiper with which to apply overflow scrolling. -->
    <div class="neon-breadcrumbs__container">
      <!--v-if-->
      <div class="neon-breadcrumbs__links">
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1">
          <!-- @slot the content of the link -->Level 1
        </a>
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1/level-2">
          <!-- @slot the content of the link -->Level 2
        </a>
        <!--v-if--><a class="neon-link--no-style neon-link--outline-none neon-link neon-breadcrumbs__link neon-breadcrumbs__link" tabindex="0" to="/level-1/level-2/1234-5678-90">
          <!-- @slot the content of the link -->1234-5678-90
        </a>
      </div>
    </div>
  </div>
  <div class="neon-swiper__fade-out"></div>
</div>
`;
